openshift/openshift-deployments.yaml
# Zookeeper
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.6.0
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
# Kafka
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-cdc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-cdc-service
  template:
    metadata:
      labels:
        app: kafka-cdc-service
    spec:
      containers:
        - name: kafka-cdc-service
          image: confluentinc/cp-kafka:7.6.0
          ports:
            - containerPort: 9092
            - containerPort: 29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-cdc-service
spec:
  selector:
    app: kafka-cdc-service
  ports:
    - name: kafka-client
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: kafka-host
      protocol: TCP
      port: 29092
      targetPort: 29092
---
# Kafka Connect
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      labels:
        app: kafka-connect
    spec:
      containers:
        - name: kafka-connect
          image: default-route-openshift-image-registry.apps.rm3.7wse.p1.openshiftapps.com/veiga3d-dev/kafka-connect-oracle-cdc:latest
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: connector-volume
              mountPath: /kafka/connect/
      volumes:
        - name: connector-volume
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
spec:
  selector:
    app: kafka-connect
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
# Kafka UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafka-ui
spec:
  to:
    kind: Service
    name: kafka-ui
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
